--- a/app/views/application/_modal_dialog.html.erb
+++ b/app/views/application/_modal_dialog.html.erb
@@ -42,11 +42,11 @@
       <div class="relative transform overflow-hidden rounded-lg bg-white px-4 pb-4 pt-5 text-left shadow-xl
                   sm:my-8 sm:w-full sm:max-w-sm sm:p-6 transition-all
                   opacity-0 translate-y-4 sm:translate-y-80 sm:scale-95 ease-in duration-200
-                  group-data-[dialog-shown=true]:opacity-100
-                  group-data-[dialog-shown=true]:translate-y-0
-                  group-data-[dialog-shown=true]:scale-100
-                  group-data-[dialog-shown=true]:ease-out
-                  group-data-[dialog-shown=true]:duration-200"
+                  group-data-[modal-dialog-shown-value=true]:opacity-100
+                  group-data-[modal-dialog-shown-value=true]:translate-y-0
+                  group-data-[modal-dialog-shown-value=true]:scale-100
+                  group-data-[modal-dialog-shown-value=true]:ease-out
+                  group-data-[modal-dialog-shown-value=true]:duration-200"
            data-action="click->modal-dialog#void:stop"
       >
         <turbo-frame id="modal-dialog__frame">
