--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <div><%= content_for(:breadcrumbs) %></div>
     <%= render 'variants_selector' %>
 
+    available variants: <%= available_variants %>
     <%= yield %>
   </div>
 </div>
