--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,7 +8,7 @@
             @apply transition duration-200;
 
             li {
-                @apply hover:bg-indigo-600 hover:text-white;
+                @apply hover:bg-orange-600 hover:text-white;
 
                 &:hover span:nth-child(2) {
                     @apply text-white;
@@ -101,7 +101,7 @@
         }
 
         code {
-            @apply mx-0.5 px-0.5 rounded border bg-gray-200 font-mono border-gray-300
+            @apply mx-0.5 px-0.5 rounded border bg-gray-200/70 font-mono border-gray-200
         }
 
         a {
