--- a/app/content/pages/index.html.erb
+++ b/app/content/pages/index.html.erb
@@ -26,7 +26,7 @@ published: true
           経験したこと、感じたこと、<a href="https://hotwired.dev" class="text-orange-600 text-2xl underline hover:opacity-70 active:text-orange-800">Hotwire</a>のこと
         </p>
       </div>
-      <%#= link_to "コンポーネント一覧", components_path %>
+      <%= link_to "コンポーネント一覧", components_path %>
     </div>
 
     <div class="md:columns-2 mt-24 max-w-4xl mx-auto gap-6">
