--- a/app/views/todos/_like_button.html+streams.erb
+++ b/app/views/todos/_like_button.html+streams.erb
@@ -1,7 +1,7 @@
 <% todo = local_assigns.fetch(:todo) %>
 
 <%= tag.div id: dom_id(todo, :like_button),
-            class: "flex items-center w-16 aria-busy:opacity-30" do %>
+            class: "flex items-center w-16" do %>
   <%= label_tag nil, class: "group flex cursor-pointer select-none" do %>
     <% if todo.liked_by?(current_user) %>
       <%= button_to todo_likes_path(todo), method: :post do %>
