--- a/app/views/customers/_search.html.erb
+++ b/app/views/customers/_search.html.erb
@@ -1,12 +1,13 @@
 <div class="max-w-72 mx-auto mb-10">
   <%= form_with url: customers_path,
                 method: :get,
+                class: "group",
                 data: {controller: "autosubmit",
                        autosubmit_wait_value: 300,
                        turbo_frame: "customers"} do  %>
   <div class="mt-2">
     <%= search_field_tag :query, params[:query],
-                         class: "block w-full rounded-full border-0 px-4 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm/6",
+                         class: "group-aria-busy:bg-[url('/Rolling@1x-1.4s-200px-200px.svg')] bg-contain bg-no-repeat bg-[right_2rem_top_0] block w-full rounded-full border-0 px-4 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm/6",
                          placeholder: "検索",
                          data: { action: "input->autosubmit#submitWithDebounce" }
     %>
