--- a/app/views/components/toggle_stimulus.html.erb
+++ b/app/views/components/toggle_stimulus.html.erb
@@ -6,11 +6,9 @@
   <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
   <div class="text-center">
     <button type="button"
-            class="group bg-gray-200 aria-checked:bg-indigo-600
-            relative inline-flex h-6 w-11 flex-shrink-0
-            cursor-pointer rounded-full border-2 border-transparent
-            transition-colors duration-200 ease-in-out
-            focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2"
+            class="group bg-gray-200 relative inline-flex h-6 w-11 flex-shrink-0 cursor-pointer rounded-full border-2 border-transparent transition-colors duration-200 ease-in-out
+                   focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2
+             aria-checked:bg-indigo-600"
             role="switch"
             aria-checked="false"
             data-controller="switch"
@@ -19,10 +17,9 @@
       <span class="sr-only">Use setting</span>
       <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
       <span aria-hidden="true"
-            class="translate-x-0 group-aria-checked:translate-x-5
-            pointer-events-none inline-block h-5 w-5
-            rounded-full bg-white shadow ring-0
-            transition duration-200 ease-in-out"
+            class="translate-x-0 pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow ring-0
+                   transition duration-200 ease-in-out
+                   group-aria-checked:translate-x-5"
       ></span>
     </button>
   </div>
