use AI generated images and text

--- a/app/views/components/iphone.html.erb
+++ b/app/views/components/iphone.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto min-w-[1028px] lg:max-w-5xl">
-  <% set_breadcrumbs [["iPhone Static", component_path(:iphone)]] %>
+  <% set_breadcrumbs [["myPhone Static", component_path(:iphone)]] %>
   <%
     @catalog_data[:images].transform_values! { image_path(_1) }
   %>
@@ -15,7 +15,7 @@
       <div class="float-right mr-6">
         <a href="" class="bg-orange-600 p-1 border rounded text-white active:bg-orange-700">Clear Order</a>
       </div>
-      <h1 class="text-5xl">Buy iPhone 15 Pro</h1>
+      <h1 class="text-5xl">Buy オラのスマホ Pro</h1>
       <div class="text-sm mt-4 text-light">From $1399 or $58.29/mo. for 24 mo.<sup>*</sup></div>
     </div>
 
@@ -28,12 +28,12 @@
       </div>
       <div class="pl-10">
         <div>
-          <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">Which is best for you?</span></h2>
+          <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">どれにするか？</span></h2>
           <div>
             <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
                              data: { iphone_static_target: "modelForm" } do %>
-              <% [{ model: "6-1inch", title: "iPhone 15 Pro", subtitle: "6.1-inch display" },
-                  { model: "6-7inch", title: "iPhone 15 Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
+              <% [{ model: "6-1inch", title: "オラのスマホ Pro", subtitle: "6.1-inch display" },
+                  { model: "6-7inch", title: "オラのスマホ Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
                 <%= render 'iphone_option',
                            name: :model,
                            value: attributes[:model],
@@ -46,8 +46,8 @@
             <% end %>
             <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
               <div class="text-sm">
-                <div class="font-bold">Need help choosing a model?</div>
-                <div class="font-light">Explore the differences in screen size and battery life</div>
+                <div class="font-bold">助けが欲しいですか？</div>
+                <div class="font-light">画面の大きさや電池の違いを調べるよ</div>
               </div>
               <div>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
@@ -59,7 +59,7 @@
         </div>
 
         <div class="mt-48">
-          <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">Pick your favorite</span></h2>
+          <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">好きなの選んで</span></h2>
           <%= tag.div do %>
             <div class="text-xl my-4" data-iphone-static-target="colorText"><%= "Foo color name" %></div>
 
@@ -80,7 +80,7 @@
         </div>
 
         <div class="mt-48">
-          <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">How much space do you need?</span></h2>
+          <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">容量はいくらにする？</span></h2>
           <div>
             <%= fieldset_tag nil, disabled: false, class: "disabled:opacity-30",
                              data: { iphone_static_target: "ramForm" } do %>
@@ -98,8 +98,8 @@
             <% end %>
             <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
               <div class="text-sm">
-                <div class="font-bold">Need help choosing a model?</div>
-                <div class="font-light">Explore the differences in screen size and battery life</div>
+                <div class="font-bold">助けが欲しいですか？</div>
+                <div class="font-light">画面の大きさや電池の違いを調べるよ</div>
               </div>
               <div>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
