--- a/app/views/hotels/features/room.html.erb
+++ b/app/views/hotels/features/room.html.erb
@@ -7,9 +7,9 @@
       <nav class="mt-8 h-16 bg-gray-100 flex justify-between items-center">
         <%= link_to "トピックス", hotel_features_path(@hotel), class: "text-center py-5 flex-1 h-full block px-4" %>
         <%= link_to "お部屋", room_hotel_features_path(@hotel), class: "text-center py-5 flex-1 h-full block px-4 border-blue-500 border-b-4" %>
-        <%= link_to "レストラン", restaurant_hotel_features_path(@hotel), class: "text-center py-5 flex-1 h-full block px-4" %>
-        <%= link_to "設備・サービス", service_hotel_features_path(@hotel), class: "text-center py-5 flex-1 h-full block px-4" %>
-        <%= link_to "基本情報", basic_info_hotel_features_path(@hotel), class: "text-center py-5 flex-1 h-full block px-4" %>
+        <%= link_to "---", "javascript:void(0)", class: "text-center py-5 flex-1 h-full block px-4" %>
+        <%= link_to "---", "javascript:void(0)", class: "text-center py-5 flex-1 h-full block px-4" %>
+        <%= link_to "---", "javascript:void(0)", class: "text-center py-5 flex-1 h-full block px-4" %>
       </nav>
       <div class="mt-8">
         <% @features.each do |feature| %>
