--- a/app/views/layouts/hotel_base.html.erb
+++ b/app/views/layouts/hotel_base.html.erb
@@ -25,18 +25,18 @@
   <div class="w-full min-w-[768px]">
     <nav class="flex h-16">
       <div class="h-14 w-14">
-        <%= image_tag "orange-tabby-cat-dribbble.jpg",
+        <%= image_tag "hotel_images/hotel-logo.webp",
                       size: "56x56",
                       class: "object-cover h-14 w-14",
                       alt: "logo" %>
       </div>
       <div class="h-14 grow flex pl-6 items-center">
-        <%= link_to "レストラン予約", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
-        <%= link_to "スパ予約", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
-        <%= link_to "海外宿泊予約", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
-        <%= link_to "お取り寄せ", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
-        <%= link_to "ふるさと納税", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
-        <%= link_to "宿泊＋航空券", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
+        <%= link_to "---", "", class: "block mr-6 font-extralight hover:text-blue-500" %>
       </div>
     </nav>
     <div><%= content_for(:breadcrumbs) %></div>
