--- a/app/views/iphones/_iphone.html.erb
+++ b/app/views/iphones/_iphone.html.erb
@@ -12,7 +12,7 @@
       <%= button_to "Clear Order", iphone_path, method: :delete,
                     class: "bg-orange-600 p-1 border rounded text-white active:bg-orange-700" %>
     </div>
-    <h1 class="text-5xl">Buy iPhone 15 Pro</h1>
+    <h1 class="text-5xl">Buy オラのスマホ Pro</h1>
     <div class="text-sm mt-4 text-light">From $1399 or $58.29/mo. for 24 mo.<sup>*</sup></div>
   </div>
 
@@ -23,12 +23,12 @@
     </div>
     <div class="pl-10">
       <div>
-        <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">Which is best for you?</span></h2>
+        <h2 class="mb-6 text-2xl">Model. <span class="text-gray-400">どれにするか？</span></h2>
         <div>
           <%= form_with url: iphone_path, method: :post do %>
             <%= fieldset_tag nil, disabled: !@iphone.model_enterable?, class: "disabled:opacity-30" do %>
-              <% [{ model: "6-1inch", title: "iPhone 15 Pro", subtitle: "6.1-inch display" },
-                  { model: "6-7inch", title: "iPhone 15 Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
+              <% [{ model: "6-1inch", title: "オラのスマホ Pro", subtitle: "6.1-inch display" },
+                  { model: "6-7inch", title: "オラのスマホ Pro Max", subtitle: "6.7-inch display" }].each do |attributes| %>
                 <%= render 'option',
                            name: :model,
                            value: attributes[:model],
@@ -42,8 +42,8 @@
           <% end %>
           <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
             <div class="text-sm">
-              <div class="font-bold">Need help choosing a model?</div>
-              <div class="font-light">Explore the differences in screen size and battery life</div>
+              <div class="font-bold">助けが欲しいですか？</div>
+              <div class="font-light">画面の大きさや電池の違いを調べるよ</div>
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
@@ -55,7 +55,7 @@
       </div>
 
       <div class="mt-48">
-        <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">Pick your favorite</span></h2>
+        <h2 class="mb-6 text-2xl">Finish. <span class="text-gray-400">好きなの選んで</span></h2>
         <%= tag.div data: { controller: "image-switcher", image_switcher_iphone_value: @iphone } do %>
           <div class="text-xl my-4" data-image-switcher-target="colorText"><%= @iphone.color_name %></div>
 
@@ -76,7 +76,7 @@
       </div>
 
       <div class="mt-48">
-        <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">How much space do you need?</span></h2>
+        <h2 class="mb-6 text-2xl">Storage. <span class="text-gray-400">容量はいくらにする？</span></h2>
         <div>
           <%= form_with url: iphone_path, method: :post do %>
             <%= fieldset_tag nil, disabled: !@iphone.ram_enterable?, class: "disabled:opacity-30" do %>
@@ -95,8 +95,8 @@
           <% end %>
           <div class="flex justify-between mt-4 p-4 block bg-gray-100 rounded-lg w-full">
             <div class="text-sm">
-              <div class="font-bold">Need help choosing a model?</div>
-              <div class="font-light">Explore the differences in screen size and battery life</div>
+              <div class="font-bold">助けが欲しいですか？</div>
+              <div class="font-light">画面の大きさや電池の違いを調べるよ</div>
             </div>
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
