--- a/app/views/components/accordion.html.erb
+++ b/app/views/components/accordion.html.erb
@@ -6,19 +6,19 @@
 
   <div>
     <h2 class="text-4xl pb-8 border-b border-gray-300">
-      Frequently Asked Questions
+      FAQ: 携帯電話のプランについて
     </h2>
     <%= render 'accordion_row',
-               title: "吾輩は猫である。名前はまだ無い。" do %>
-      どこで生れたかとんと見当けんとうがつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。
+               title: "携帯プランの変更はどうすればいいですか？" do %>
+      携帯プランの変更は、店頭・公式アプリ・ウェブサイトから可能です。アプリやウェブでは24時間対応しており、数分で完了します。
     <% end %>
     <%= render 'accordion_row',
-               title: "この書生の掌の裏でしばらくはよい心持に坐っておった" do %>
-      ふと気が付いて見ると書生はいない。たくさんおった兄弟が一疋ぴきも見えぬ。肝心かんじんの母親さえ姿を隠してしまった。その上今いままでの所とは違って無暗むやみに明るい。眼を明いていられぬくらいだ。はてな何でも容子ようすがおかしいと、のそのそ這はい出して見ると非常に痛い。吾輩は藁わらの上から急に笹原の中へ棄てられたのである。
+               title: "機種変更時のデータ移行はできますか？" do %>
+      機種変更時、データ移行はスタッフがサポートします。また、クラウドサービスやアプリを使えば簡単に自分で移行も可能です。
     <% end %>
     <%= render 'accordion_row',
-               title: "吾輩の主人は滅多めったに吾輩と顔を合せる事がない" do %>
-      職業は教師だそうだ。学校から帰ると終日書斎に這入ったぎりほとんど出て来る事がない。家のものは大変な勉強家だと思っている。当人も勉強家であるかのごとく見せている。しかし実際はうちのものがいうような勤勉家ではない。
+               title: "解約の手続き方法を教えてください。" do %>
+      解約手続きは、契約者ご本人が店頭で行う必要があります。身分証明書をご持参ください。一部プランはウェブでの手続きも可能です。
     <% end %>
   </div>
 <% end %>
