--- a/app/views/components/dropdown_menu.html.erb
+++ b/app/views/components/dropdown_menu.html.erb
@@ -17,7 +17,7 @@
               aria-haspopup="true">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Open user menu</span>
-        <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+        <%= image_tag("content_images/avatar.webp", class: "h-8 w-8 rounded-full") %>
       </button>
 
       <!--
