--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,8 +1,6 @@
-<%= form_with(model: customer) do |form| %>
+<%= form_with(model: customer, class: "group") do |form| %>
   <% if customer.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
-
+    <div class="text-red-600">
       <ul>
         <% customer.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -12,16 +10,25 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.label :name, class: "block text-sm/6 font-semibold text-gray-900" %>
+    <div class="mt-2.5">
+      <%= form.text_field :name,
+                          class: "block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm/6" %>
+    </div>
   </div>
 
   <div>
-    <%= form.label :jp_name, style: "display: block" %>
-    <%= form.text_field :jp_name %>
+    <%= form.label :jp_name, class: "block text-sm/6 font-semibold text-gray-900" %>
+    <div class="mt-2.5">
+      <%= form.text_field :jp_name,
+                          class: "block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm/6" %>
+    </div>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="mt-8 flex justify-between">
+    <%= link_to "キャンセル", customers_path, class: "btn-outline-primary" %>
+    <div class="pl-10 group-aria-busy:bg-[url('/Rolling@1x-1.4s-200px-200px.svg')] bg-contain bg-no-repeat bg-[left_0_top_0]">
+      <%= form.submit class: "btn-primary", data: { turbo_submits_with: "更新中..." } %>
+    </div>
   </div>
 <% end %>
