--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -7,12 +7,13 @@
 
   <%= render "search" %>
 
-  <%= turbo_frame_tag "customers" do %>
+  <%= turbo_frame_tag "customers", target: "_top" do %>
     <table class="table table-striped w-full">
       <thead>
       <tr class="border-b-2 border-gray-900">
         <th class="p-2 text-left">Name</th>
         <th class="p-2 text-left">JP Name</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -23,6 +24,13 @@
           </td>
           <td class="p-2">
             <%= customer.jp_name %>
+          </td>
+          <td class="p-2">
+            <%= link_to edit_customer_path(customer) do %>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+              </svg>
+            <% end %>
           </td>
         </tr>
       <% end %>
