documentation and tests

--- a/app/views/components/sidebar_other_page.html.erb
+++ b/app/views/components/sidebar_other_page.html.erb
@@ -4,10 +4,10 @@
            title: "Sidebar Menu 2",
            description: "" do %>
 
-  <div class="flex">
+  <div class="flex border rounded p-2">
     <%= render 'sidebar' %>
     <div class="flex-grow">
-      <%= image_tag "component_images/demo-engineering-team", class: "w-full" %>
+      <%= image_tag "component_images/demo-engineering-team.webp", class: "w-full" %>
     </div>
   </div>
 <% end %>
