--- a/app/views/components/sidebar.html.erb
+++ b/app/views/components/sidebar.html.erb
@@ -5,10 +5,10 @@
            description: "" do %>
 
 
-  <div class="flex">
+  <div class="flex rounded border p-2">
     <%= render 'sidebar' %>
     <div class="flex-grow">
-      <%= image_tag "component_images/demo-dashboard", class: "w-full" %>
+      <%= image_tag "component_images/demo-dashboard.webp", class: "w-full" %>
     </div>
   </div>
 <% end %>
