--- a/app/views/components/toggle_checkbox.html.erb
+++ b/app/views/components/toggle_checkbox.html.erb
@@ -12,7 +12,7 @@
           has-[:checked]:bg-indigo-600"
          role="switch"
   >
-    <input type="checkbox" class="peer opacity-0 w-0 border-none"/>
+    <input type="checkbox" tabindex="0" class="peer opacity-0 w-0 border-none"/>
     <span class="sr-only">Use setting</span>
     <!-- Enabled: "translate-x-5", Not Enabled: "translate-x-0" -->
     <span aria-hidden="true"
