--- a/app/views/components/toggle_stimulus.html.erb
+++ b/app/views/components/toggle_stimulus.html.erb
@@ -10,6 +10,7 @@
                    focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:ring-offset-2
              aria-checked:bg-indigo-600"
             role="switch"
+            tabindex="0"
             aria-checked="false"
             data-controller="switch"
             data-action="click->switch#toggle keydown.space:stop:prevent->switch#toggle"
