chapter list mobile menu

--- a/app/content/layouts/article.html.erb
+++ b/app/content/layouts/article.html.erb
@@ -1,5 +1,7 @@
 <%= render_layout "body" do %>
-  <div class="lg:max-w-6xl lg:mx-auto">
+  <div class="group/chapter-list lg:max-w-6xl lg:mx-auto"
+       data-controller="chapter-list"
+       data-chapter-list-shown-value="false">
     <div class="px-6 pt-8 lg:px-8 lg:pl-80 ">
       <div class="mx-auto max-w-2xl">
         <%= render "content_breadcrumbs",
@@ -28,9 +30,18 @@
           <%= current_page.data.subtitle %>
         </p>
 
-        <div class="md:hidden">
-          <%= safe_join extract_toc(full_document) %>
+        <div class="fixed top-4 right-4 max-w-96 border rounded-md p-2 bg-white/90 md:hidden">
           <!-- chapter list -->
+          <div class="flex justify-end">
+            <button class="block" data-action="click->chapter-list#toggle">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 6.75h12M8.25 12h12m-12 5.25h12M3.75 6.75h.007v.008H3.75V6.75Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0ZM3.75 12h.007v.008H3.75V12Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm-.375 5.25h.007v.008H3.75v-.008Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z"/>
+              </svg>
+            </button>
+          </div>
+          <div class="group-data-[chapter-list-shown-value=false]/chapter-list:hidden">
+            <%= safe_join extract_toc(full_document) %>
+          </div>
         </div>
         <div class="mt-10 max-w-3xl mx-auto">
           <% if current_page.children.any? %>
